<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".Home">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <TextView
                android:id="@+id/greeting_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hello_selly"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/profile_image"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Welcome"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/greeting_text"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />


            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/search_hint"
                android:background="@drawable/search"
                android:padding="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <ImageView
                android:id="@+id/workout_plan_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/workoutplan"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintTop_toBottomOf="@id/search_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/view_workout_plans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/view_workout_plans"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/workout_plan_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <ImageView
                android:id="@+id/diet_plan_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dietolan"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_workout_plans" />

            <TextView
                android:id="@+id/view_diet_plans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/view_diet_plans"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/diet_plan_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <ImageView
                android:id="@+id/bmi_calculator_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bmi"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_diet_plans" />

            <TextView
                android:id="@+id/bmi_calculator_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/calculate_bmi"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/bmi_calculator_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Supplement Selection Section -->

            <ImageView
                android:id="@+id/supplement_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/supliment"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bmi_calculator_text" />

            <TextView
                android:id="@+id/view_supplements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_supplements"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/supplement_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/home" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/workout" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/diet" />

        <ImageView
            android:id="@+id/ppro"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/profile" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
